clusters/lgsk8sp1/apps/hello-world/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
    kubernetes.io/metadata.name: hello-world
