clusters/lgsk8sp1/apps/hello-world/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hello-world
  namespace: hello-world
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP
    hosts:
    - 'hello-world.diegoluisi.eti.br'
