clusters/lgsk8sp1/apps/hello-world/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world
  namespace: hello-world
spec:
  hosts:
  - "hello-world.diegoluisi.eti.br"
  gateways:
  - hello-world
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: hello-world
